<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginTop="5sp">

        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20sp" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:layout_marginTop="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charlotte"
                android:layout_marginTop="43dp"
                android:textSize="18sp"/>
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/align"
            android:contentDescription="@string/todo"
            android:layout_marginTop="25dp"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="350sp"
        android:layout_height="250sp"
        android:background="@drawable/container"
        android:layout_marginStart="30sp"
        android:layout_marginTop="40sp"
        android:padding="10sp">

        <Button
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/white"
            android:text="@string/Claim"
            android:textColor="#9176ff"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Popular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:text="@string/See_More"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#ff9f00"
            android:layout_marginStart="240sp"
            android:layout_marginTop="23sp"
            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="220sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="@string/product_1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 2"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 3"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 4"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 5"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 7"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:orientation="vertical">
                <View
                    android:layout_width="250sp"
                    android:layout_height="170sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="Product 8"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16sp"/>
            </LinearLayout>






        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_home_decoration"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</LinearLayout>